--- a/maskset/maskset/maskset.vcxproj
+++ b/maskset/maskset/maskset.vcxproj
@@ -76,7 +76,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="arguments.cpp" />
     <ClCompile Include="maskset.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="arguments.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
