--- a/maskset/maskset/maskset.vcxproj.filters
+++ b/maskset/maskset/maskset.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="maskset.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="arguments.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="arguments.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
